# adtech

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  git_log.txt  load_test_data.py  locustfile.py  performance_report.md  pyproject.toml  start.sh  test_analytics_performance.sh  test_campaign_validation.py  test_celery.py  test_circuit_breaker.sh  test_endpoints.sh  test_event_sourcing.sh  test_gcp_bigquery.sh  test_graphql.sh  test_jwt_auth.py  test_million_records_performance.sh  test_new_endpoints.sh  test_validations.sh  test_websockets.sh
.github/workflows/: ci.yml
apps/advertisers/: apps.py  models.py  serializers.py  urls.py  views.py
apps/advertisers/migrations/: 0001_initial.py
apps/analytics/: bigquery.py  events.py  models.py  prod.py  repositories.py  repository.py  tasks.py  urls.py  views.py
apps/analytics/management/: load_million_records.py
apps/analytics/migrations/: 0001_initial.py  0002_advertiseraccount_creative.py
apps/analytics/repositories/: __init__.py  base.py  cached.py  connection.py  (+2 more)
apps/audiences/: apps.py  models.py  serializers.py  urls.py  views.py
apps/authentication/: middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/bidding/: apps.py  models.py  serializers.py  urls.py  views.py
apps/billing/: models.py  serializers.py  urls.py  views.py
apps/campaigns/: circuit_breaker.py  models.py  serializers.py  urls.py  views.py
apps/creatives/: apps.py  models.py  serializers.py  storage.py  urls.py  views.py
apps/events/: models.py  pubsub.py  serializers.py  urls.py  views.py
apps/realtime/: consumer.py  models.py  pubsub.py  routing.py  urls.py  views.py
core/: __init__.py  asgi.py  celery.py  urls.py
core/graphql/: schema.py
core/settings/: base.py  dev.py  local.py  prod.py  staging.py
tasks/: __init__.py  analytics.py
(+19 files in other folders)
